--- a/laptop.html
+++ b/laptop.html
@@ -351,24 +351,16 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07JWCHWRM&asins=B07JWCHWRM&linkId=84c1cfd5b819e8e889d23c725ce1fcfd&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B081JWZQJB&asins=B081JWZQJB&linkId=caecb59eb2ff95055fca66709e2fe45d&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08CGKP829&asins=B08CGKP829&linkId=12c4b56a5144cf8497fbdb3b7fa91eb6&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" margi respnwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B087S2M8R4&asins=B087S2M8R4&linkId=cb4820f86f0b6ece7ad3dd2043589d60&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
@@ -376,24 +368,16 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07N15MKHY&asins=B07N15MKHY&linkId=6086551dc4f906b06a4ce1b326854f48&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07ZG5W9QN&asins=B07ZG5W9QN&linkId=1bfb31026e737893372d940d8a63f53c&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08DHHB2W1&asins=B08DHHB2W1&linkId=3712805c145db3e7bb699cf7ad6f9289&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08BRRKZ4W&asins=B08BRRKZ4W&linkId=33a450a756f07e9b923b329c8fba1013&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
@@ -401,24 +385,16 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08BZR11HM&asins=B08BZR11HM&linkId=8ce546825c017abb807352da6f29c43e&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwi respdth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08CZ2KNS4&asins=B08CZ2KNS4&linkId=769e27701aebf8fc83d8702a22b206d6&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08D6Y52PS&asins=B08D6Y52PS&linkId=cc950621790749ac67e50595405a6ec0&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08C5WCPHZ&asins=B08C5WCPHZ&linkId=aa5c7a58c5c915699e3aafe5ac7a8581&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
